[package]
name = "toppy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.10"

# PR: Fix panic caused by misaligned pointer dereference
netstat2 = { git = "https://github.com/ohadravid/netstat2-rs.git", rev = "7e9fcbbedee44469bb3807412881b2bf006cb524" }
procfs = "0.15.1"
